# stasis

./: .gitignore  .readthedocs.yml  CMakeLists.txt  LICENSE  README.md  omc.ini  stasis.ini  stasis_pandoc.css
.github/workflows/: cmake-multi-platform.yml
cmake/: GitVersion.cmake
docs/: Doxyfile  conf.py  devel.md  environment.yaml
examples/template/: example.ini
include/: artifactory.h  conda.h  config.h.in  copy.h  core.h  core_mem.h  deliverable.h  delivery.h  docker.h  download.h  envctl.h  environment.h  github.h  ini.h  junitxml.h  multiprocessing.h  ohmycal.h  omc.h  os_darwin.h  os_linux.h  os_windows.h  recipe.h  relocation.h  rules.h  str.h  strlist.h  system.h  template.h  template_func_proto.h  utils.h  version.h.in  wheel.h
mission/generic/: Dockerfile.in  base.yml  generic.ini  readme.md.in
mission/hst/: Dockerfile.in  base.yml  hst.ini  readme.md.in  release_notes.md.in
mission/jwst/: base.yml  jwst.ini  readme.md.in
mission/roman/: Dockerfile.in  base.yml  readme.md.in  release_notes.md.in  roman.ini
src/: CMakeLists.txt  artifactory.c  conda.c  copy.c  deliverable.c  delivery.c  delivery_build.c  delivery_install.c  delivery_populate.c  delivery_postprocess.c  delivery_test.c  docker.c  download.c  envctl.c  environment.c  github.c  globals.c  ini.c  junitxml.c  main.c  multiprocessing.c  omc_indexer.c  omc_main.c  recipe.c  relocation.c  rules.c  stasis_indexer.c  stasis_main.c  str.c  strlist.c  system.c  template.c  template_func_proto.c  utils.c  wheel.c
src/cli/: CMakeLists.txt
src/cli/stasis/: CMakeLists.txt  args.c  args.h  callbacks.c  callbacks.h  stasis_main.c  system_requirements.c  system_requirements.h  tpl.c  tpl.h
src/cli/stasis/include/: args.h
src/cli/stasis_indexer/: CMakeLists.txt  args.c  callbacks.c  helpers.c  helpers.h  junitxml_report.c  readmes.c  stasis_indexer.c  stasis_indexer_main.c  website.c  website.h
src/cli/stasis_indexer/include/: args.h  helpers.h  junitxml_report.h  readmes.h  website.h
src/lib/: CMakeLists.txt
src/lib/core/: CMakeLists.txt  artifactory.c  conda.c  copy.c  delivery.c  delivery_artifactory.c  delivery_build.c  delivery_conda.c  delivery_docker.c  delivery_init.c  delivery_install.c  delivery_populate.c  delivery_postprocess.c  delivery_show.c  delivery_test.c  docker.c  download.c  envctl.c  environment.c  github.c  globals.c  ini.c  junitxml.c  log.c  multiprocessing.c  package.c  recipe.c  relocation.c  semaphore.c  str.c  strlist.c  system.c  template.c  template_func_proto.c  utils.c  version_compare.c  wheel.c  wheelinfo.c
src/lib/core/include/: conda.h  copy.h  core.h  core_mem.h  core_message.h  docker.h  junitxml.h  log.h  multiprocessing.h  package.h  recipe.h  relocation.h  rules.h  sem.h  str.h  strlist.h  template.h  template_func_proto.h  utils.h  version_compare.h  wheel.h  wheelinfo.h
src/lib/delivery/: CMakeLists.txt  delivery.c  delivery_artifactory.c  delivery_build.c  delivery_conda.c  delivery_docker.c  delivery_export.c  delivery_init.c  delivery_install.c  delivery_populate.c  delivery_postprocess.c  delivery_show.c  delivery_test.c
src/lib/delivery/include/: delivery.h
src/lib/entrypoint/: CMakeLists.txt  entrypoint_callbacks.c  stasis_entrypoint.c  system_requirements.c
src/lib/entrypoint/include/: entrypoint.h  system_requirements.h
src/lib/index/: CMakeLists.txt  args.c  helpers.c  index_callbacks.c  junitxml_report.c  readmes.c  stasis_index_entrypoint.c
src/lib/index/include/: index.h  index_callbacks.h
tests/: CMakeLists.txt  README.md  _rt_boilerplate.sh  _test_boilerplate.c  rt_generic.sh  rt_generic_based_on.sh  rt_generic_ng_based_on.sh  setup.sh  test_artifactory.c  test_conda.c  test_copy.c  test_docker.c  test_download.c  test_envctl.c  test_environment.c  test_ini.c  test_junitxml.c  test_multiprocessing.c  test_recipe.c  test_relocation.c  test_str.c  test_strlist.c  test_system.c  test_template.c  test_tests.c  test_utils.c  test_version_compare.c  test_wheel.c  test_wheelinfo.c  testing.h
tests/data/: gbo.ini  gbo.yml  gbo_ng.ini  generic.ini  generic_based_on.ini  result.xml  result_error.xml
tests/data/compression/: xz  zip  zstd
tests/include/: testing.h
