add_library(stasis_core STATIC
        globals.c
        timespec.c
        str.c
        strlist.c
        ini.c
        conda.c
        environment.c
        utils.c
        system.c
        download.c
        recipe.c
        relocation.c
        wheelinfo.c
        copy.c
        artifactory.c
        template.c
        rules.c
        docker.c
        junitxml.c
        github.c
        template_func_proto.c
        envctl.c
        multiprocessing.c
        semaphore.c
)
target_include_directories(stasis_core PRIVATE
        ${core_INCLUDE}
        ${delivery_INCLUDE}
        ${CMAKE_CURRENT_SOURCE_DIR}/include
)
